# protectjs-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE.md  README.md  biome.json  mise.toml  package-lock.json  package.json  plan.md  scratch.ts  tsconfig.json  tsconfig.test.json
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
crates/cpu-count/: Cargo.toml
crates/cpu-count/src/: lib.rs
crates/jseql-ffi/: Cargo.toml
crates/jseql-ffi/src/: lib.rs
crates/protect-ffi/: Cargo.toml
crates/protect-ffi/examples/: print_eql_v3_sql.rs
crates/protect-ffi/src/: encrypt_config.rs  eql.rs  eql_v3.rs  js_plaintext.rs  lib.rs  query.rs  wasm.rs
docs/: canonical-encryption-config-migration.md  jsonb-api-reference.md  jsonb-integration.md  jsonb-troubleshooting.md
integration-tests/: docker-compose.yml  package-lock.json  package.json  tasks.toml  tsconfig.json  vitest.config.ts
integration-tests/sql/: cipherstash-encrypt-v3.sql
integration-tests/tests/: common.ts  dates.test.ts  encrypt-config.test.ts  eql-v3.test.ts  event-loop-exit.test.ts  index.test.ts  js-strategy.test.ts  json-bulk.test.ts  json-containment.test.ts  json.test.ts  keyset.test.ts  lock-context.test.ts  oidc-federation.test.ts  postgres-v3.test.ts  postgres.test.ts  query.test.ts  scalar-bulk.test.ts  scalar.test.ts  wasm-round-trip.test.ts
integration-tests/tests/fixtures/: event-loop-exit-auto.cjs  event-loop-exit-jsbacked.cjs
scripts/: changelog-extract.mjs  changelog-release.mjs  inline-wasm.mjs  sync-eql-v3-types.sh
src/: bigintWire.test.ts  bigintWire.ts  credentials.ts  eql-v3.ts  errors.test.ts  errors.ts  index.cts  index.mts  index.types.test.ts  load.cts  normalizeEncryptConfig.test.ts  normalizeEncryptConfig.ts  withEnvCredentials.test.ts
src/eql-v3-types/: Bigint.ts  BigintEq.ts  BigintEqQuery.ts  BigintOrd.ts  BigintOrdOpe.ts  BigintOrdOpeQuery.ts  BigintOrdOre.ts  BigintOrdOreQuery.ts  BigintOrdQuery.ts  BloomFilter.ts  Bool.ts  Boolean.ts  Ciphertext.ts  Date.ts  DateEq.ts  DateEqQuery.ts  DateOrd.ts  DateOrdOpe.ts  DateOrdOpeQuery.ts  DateOrdOre.ts  DateOrdOreQuery.ts  DateOrdQuery.ts  Double.ts  DoubleEq.ts  DoubleEqQuery.ts  DoubleOrd.ts  DoubleOrdOpe.ts  DoubleOrdOpeQuery.ts  DoubleOrdOre.ts  DoubleOrdOreQuery.ts  DoubleOrdQuery.ts  EntryCiphertext.ts  Float4.ts  Float4Eq.ts  Float4Ord.ts  Float4OrdOpe.ts  Float4OrdOre.ts  Float8.ts  Float8Eq.ts  Float8Ord.ts  (+92 more)
