[package]
name = "jseql-ffi"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipherstash-client = "0.16.0"
neon = "1"
once_cell = "1.20.2"
thiserror = "2.0.8"
tokio = { version = "1", features = ["full"] }
