[package]
name = "protect-ffi"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipherstash-client = { git = "https://github.com/cipherstash/cipherstash-suite", branch = "main", features = ["tokio"] }
cts-common = { git = "https://github.com/cipherstash/cipherstash-suite", branch = "main", default-features = false }
stack-profile = { git = "https://github.com/cipherstash/cipherstash-suite", branch = "main" }
hex = "0.4.3"
neon = { version = "1", features = ["serde", "tokio"] }
once_cell = "1.20.2"
rust_decimal = "1.37"
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
vitaminc-protected = { version = "0.1.0-pre4" }

[dev-dependencies]
chrono = "0.4.42"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.3"
