[package]
name = "protect-ffi"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
cipherstash-client = { version = "=0.35.0", features = ["tokio"] }
cts-common = { version = "=0.35.0", default-features = false }
stack-auth = { version = "=0.35.0" }
hex = "0.4.3"
once_cell = "1.20.2"
rust_decimal = "1.37"
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.18"
uuid = { version = "1.7", features = ["serde"] }
vitaminc = { version = "=0.1.0-pre4.2", features = ["random", "protected"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neon = { version = "1", features = ["serde", "tokio"] }
stack-profile = { version = "=0.35.0" }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.3"
